# cyber-pilot

./: .cypilot-workspace.toml  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cypilot.code-workspace  Makefile  README.md  pyproject.toml  sonar-project.properties  vulture_whitelist.py  whatsnew.toml
.bootstrap/.core/: README.md  whatsnew.toml
.bootstrap/config/: AGENTS.md  core.toml
.claude/: settings.local.json
.claude/commands/: cypilot.md
.cursor/rules/: cypilot.mdc
.github/workflows/: ci.yml
.prs/81/: diff.patch  meta.json  review.md  review_comments.json  review_threads.json
architecture/: DECOMPOSITION.md  DESIGN.md  PRD.md
architecture/features/: agent-integration.md  blueprint-system.md  (+9 more)
requirements/: agent-compliance.md  auto-config.md  execution-protocol.md
schemas/: workspace.schema.json
scripts/: check_versions.py
tests/: _test_helpers.py  conftest.py  test_agents_coverage.py  test_ai_navigate_when.py  test_artifacts_meta.py  test_blueprint_coverage.py  test_check_language.py  test_chunk_input.py  test_cli_integration.py  test_cli_py_coverage.py  test_constraints_utils.py  test_content_language.py  test_core_structure.py  test_core_upgrade_e2e.py  test_diff_engine.py  test_init_inject.py  test_kit.py  test_kit_manifest_resolve.py  test_kit_manifest_validate.py  test_kit_upgrade_e2e.py  test_manifest.py  test_migrate.py  test_narrowed_except_coverage.py  test_ralphex_discover.py  test_subagent_registration.py  test_toc.py  test_ui_human_mode.py  test_update.py  test_validate.py  test_workspace.py
workflows/: analyze.md  generate.md  plan.md
(+169 files in other folders)
